Ahora sí regresa al inicio

--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto nav-ul">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" data-section="nav"
+                        <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
                             data-value="inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
