Agregué los iconos al footer y estilicé la lista de los servicios

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.png">
 </head>
 
 <body>
@@ -104,7 +105,7 @@
     <!--AQUÍ TERMINA EL BANNER-->
 
     <!--NUESTROS SERVICIOS-->
-    <div class="container">
+    <div class="container servicios-inicio">
         <h2 class="text-center" data-section="inicio" data-value="titulo-servicios">NUESTROS SERVICIOS</h2>
         <!--PRIMERA FORMA-->
         <div class="container">
@@ -120,7 +121,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Estudios de suelos</h3>
+                                <h3 class="card-title fs-5">Estudios Geotécnicos</h3>
                             </a>
                         </div>
                     </div>
@@ -136,7 +137,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Estudios de suelos</h3>
+                                <h3 class="card-title fs-5">Control de Calidad de Materiales</h3>
                             </a>
                         </div>
                     </div>
@@ -152,7 +153,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Estudios de suelos</h3>
+                                <h3 class="card-title fs-5">Perforación</h3>
                             </a>
                         </div>
                     </div>
@@ -172,17 +173,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md">
-                    <p>Geotecnia de Nicaragua, (GEONIC) en estos veinte (20) años de vida ha venido desarrollando
-                        estudios para ingeniería vertical (cimientos de edificios, diseño de mejoramiento de suelos de
-                        fundación, diseños de hormigón hidráulico, entre otros), para ingeniería horizontal (diseño
-                        vial, diseño de estructuras de pavimento, concreto hidráulico, concreto asfáltico, adoquines,
-                        geotextil), estudios de fuentes de materiales, esto a nivel nacional e internacional, y control
-                        de calidad de suelos y concreto.
+                    <p>Geonicsa, una firma consultora con más de dos décadas de experiencia, se estableció con el
+                        compromiso de realizar nuestro trabajo con los estándares de calidad y excelencia que nos han
+                        definido desde nuestra fundación hasta la actualidad.
+
                     </p>
                     <p>
-                        GEONIC atiende las especialidades de una empresa consultora privada en obras civiles; está
-                        acreditada con todas las certificación y licencias establecidas por las entidades
-                        gubernamentales de Nicaragua.
+                        Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas,
+                        respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro
+                        trabajo.
+
+                    </p>
+                    <p>
+
+
+                        En Geonicsa, abogamos por la transparencia y sinceridad en todas nuestras interacciones con
+                        clientes tanto nacionales como internacionales. Este enfoque nos permite garantizar la claridad
+                        necesaria para mantener la calidad en cada uno de nuestros servicios.
+
                     </p>
                     <a href="sobre-nosotros.html" style="color:white !important">Ver más...</a>
                 </div>
@@ -202,7 +210,8 @@
 
     <!--CONTACTANOS-->
     <div class="container text-center ">
-        <a class="btn btn-contacto texto-blanco fs-5" href="#" role="button" data-section="inicio" data-value="btn-contactanos">Contáctanos</a>
+        <a class="btn btn-contacto texto-blanco fs-5" href="#" role="button" data-section="inicio"
+            data-value="btn-contactanos">Contáctanos</a>
     </div>
     <!--CONTACTANOS-->
 
@@ -213,12 +222,31 @@
                 <div class="col-6 col-md-2 mb-3">
                     <h5>Contáctanos</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Telefono: </a>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/call_us_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">+xx xxxxxxx</p>
+                            </a>
                         </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Correo: </a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/email_us.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">+xx xxxxxxx</p>
+                            </a>
+                        </li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/whatsappus_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">+xx xxxxxxx</p>
+                            </a>
+                        </li>
+                        
                     </ul>
                 </div>
 
@@ -235,16 +263,30 @@
                 <div class="col-6 col-md-2 mb-3">
                     <h5>Nuestras redes sociales</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Linkedin</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Facebook</a></li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/linkedin_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">LinkedIn</p>
+                            </a>
+                        </li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/facebook_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">Facebook</p>
+                            </a>
+                        </li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Whatsapp</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+
                     </ul>
                 </div>
 
                 <div class="col-md-5 offset-md-1 mb-3">
-                    <h4>Nuestra ubicación</h4>
+                    <img src="./img/location_icon.png" class="d-inline" style="width: 2.2rem !important;">
+                    <h4  class="d-inline">Nuestra ubicación</h4>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.4817587951065!2d-86.31358561869213!3d12.14756960173846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1705983589300!5m2!1sen!2sni"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
