--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.png">
 </head>
 
 <body style="background-color: #0b293d !important;">
