Cambios en los json, nuevos directorios para las imágenes y nuevos html

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -80,7 +80,7 @@
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row container" style="padding-top: 5vh !important;">
+        <div class="row container">
             <div class="col-md descripcion-servicio">
                 <p>Nuestro fundador: <strong>Msc. Ing. Oscar Osvaldo Jirón Boza</strong> </p>
                 <p class="lh-base">En 1972 inició sus estudios de Ingeniería Civil en la UNAN Managua, su primer trabajo
