--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="img-oscura">
             <img src="./img/banner_inicio.jpg" class="banner">
         </div>
+       
         <div class="texto-derecha">
             <p style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">En el año
                 2,004, el ingeniero consultor con estudios de Maestría en Mecánica de Suelos, Oscar Osvaldo Jirón Boza,
@@ -98,7 +99,7 @@
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                 href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
                 target="_blank">+505 8527-49058</a>
-        </address>
+        </address> 
 
 
     </div>
@@ -111,10 +112,10 @@
         <div class="container">
             <div class="row justify-content-center">
 
-                <div class="col-md-auto col-lg-3 ">
+                <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
-                            <a href="servicios.html"
+                            <a href="estudios-de-suelos.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                     viewBox="0 0 16 16" style="width:2rem !important;">
@@ -127,10 +128,10 @@
                     </div>
                 </div>
 
-                <div class="col-md-auto col-lg-3 ">
+                <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
-                            <a href="#"
+                            <a href="control-de-calidad-de-materiales.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                     viewBox="0 0 16 16" style="width:2rem !important;">
@@ -143,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-auto col-lg-3 ">
+                <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
                             <a href="#"
@@ -205,7 +206,50 @@
 
     <div class="container">
         <h2 class="text-center " data-section="proyectos" data-value="titulo">NUESTROS PROYECTOS</h2>
-        <p>En construcción...</p>
+        <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row justify-content-center">
+                    <div class="col-md ">
+                        <div class="card" style="width: 80%;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="card" style="width: 80%">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </div>
 
     <!--CONTACTANOS-->
@@ -225,7 +269,7 @@
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
-                                <img class="d-inline" src="./img/call_us_icon.png"
+                                <img class="d-inline" src="./img/icons/call_us_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">+xx xxxxxxx</p>
                             </a>
@@ -233,7 +277,7 @@
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
-                                <img class="d-inline" src="./img/email_us.png"
+                                <img class="d-inline" src="./img/icons/email_us.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">+xx xxxxxxx</p>
                             </a>
@@ -241,12 +285,12 @@
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
-                                <img class="d-inline" src="./img/whatsappus_icon.png"
+                                <img class="d-inline" src="./img/icons/whatsappus_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">+xx xxxxxxx</p>
                             </a>
                         </li>
-                        
+
                     </ul>
                 </div>
 
@@ -266,7 +310,7 @@
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
-                                <img class="d-inline" src="./img/linkedin_icon.png"
+                                <img class="d-inline" src="./img/icons/linkedin_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">LinkedIn</p>
                             </a>
@@ -274,7 +318,7 @@
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
-                                <img class="d-inline" src="./img/facebook_icon.png"
+                                <img class="d-inline" src="./img/icons/facebook_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">Facebook</p>
                             </a>
@@ -285,8 +329,8 @@
                 </div>
 
                 <div class="col-md-5 offset-md-1 mb-3">
-                    <img src="./img/location_icon.png" class="d-inline" style="width: 2.2rem !important;">
-                    <h4  class="d-inline">Nuestra ubicación</h4>
+                    <img src="./img/icons/location_icon.png" class="d-inline" style="width: 2.2rem !important;">
+                    <h4 class="d-inline">Nuestra ubicación</h4>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.4817587951065!2d-86.31358561869213!3d12.14756960173846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1705983589300!5m2!1sen!2sni"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
