Agregué nuevas pestañas

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -76,82 +76,118 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 data-section="control-materiales" data-value="titulo">CONTROL DE CALIDAD DE MATERIALES</h3>
+        <h3>Control de calidad del concreto </h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row">
-            <div class="col-md descripcion-servicio">
-                <p>En Geonicsa, nuestro compromiso con la calidad va más allá de la geotecnia. Ofrecemos servicios
-                    especializados en el control de calidad de materiales, asegurando que cada componente utilizado en
-                    su proyecto cumpla con los más altos estándares. Desde la selección meticulosa de materiales hasta
-                    la supervisión en el sitio, nuestro equipo dedicado se asegura de que cada elemento contribuya a la
-                    excelencia y durabilidad de su proyecto.
-                </p>
+        <div class="row descripcion-servicio">
+            <p class="fs-5">
+                El control de calidad del concreto mediante cilindros, viguetas, cubos, martillo suizo y extracción de
+                núcleos son diversas técnicas y pruebas específicas que se utilizan para evaluar diferentes propiedades
+                del concreto. A continuación, se describen brevemente cada uno de estos métodos:
+
+            </p>
+        </div>
+        <div class="row descripcion-servicio">
+            <div class="col-md">
+
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="text-center fs-5">Cilindros de Concreto</h4>
+                        <p> Los cilindros de concreto se utilizan para realizar pruebas de resistencia a la
+                            compresión.
+                            <br> <br>
+                            <b>Procedimiento:</b> <br>Se moldean cilindros de concreto en el sitio o en el laboratorio y
+                            luego se
+                            someten a pruebas de resistencia a la compresión para evaluar la capacidad del concreto para
+                            soportar cargas de compresión.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="text-center fs-5">Viguetas de Concreto</h4>
+                        <p>
+                            Las viguetas se utilizan para evaluar la resistencia a flexión y otras
+                            propiedades del concreto.
+                            <br> <br>
+                            <b> Procedimiento:</b><br>
+                            Las viguetas se moldean y se someten a pruebas para medir su capacidad para
+                            resistir cargas flexionales y evaluar la calidad y durabilidad del concreto.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md ">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="text-center fs-5">Cubos de concreto</h4>
+                        <p>
+                            Los cubos se utilizan para realizar pruebas de resistencia a la compresión,
+                            similares a los cilindros.
+                            <br> <br>
+                            <b> Procedimiento:</b><br>
+                            Se moldean cubos de concreto y se someten a pruebas de resistencia a la
+                            compresión para evaluar la calidad del concreto.
+
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row justify-content-center">
-
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
+        <div class="row descripcion-servicio">
+            <div class="col-md ">
+                <div class="card">
                     <div class="card-body">
-                        <a href="control-calidad-del-concreto.html"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Control
-                                de calidad del concreto</h3>
-                        </a>
+                        <h4 class="text-center fs-5">Martillo Suizo (Esclerómetro)</h4>
+                        <p>
+                            El martillo suizo, o esclerómetro, se utiliza para medir la dureza superficial
+                            del concreto.
+                            <br> <br>
+                            <b> Procedimiento:</b><br>
+                            El martillo suizo se golpea contra la superficie del concreto, y la energía
+                            del rebote se mide para estimar la dureza superficial. Se utiliza para evaluar la calidad
+                            del concreto y detectar posibles problemas como la carbonatación.
+
+                        </p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
+            <div class="col-md ">
+                <div class="card">
                     <div class="card-body">
-                        <a href="#calidad-suelos"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Control
-                                de calidad de los suelos</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
+                        <h4 class="text-center fs-5">Extracción de Núcleos</h4>
+                        <p>
 
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
-                    <div class="card-body">
-                        <a href="#laboratorio-suelos"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Laboratorio de suelos</h3>
-                        </a>
+                            La extracción de núcleos se utiliza para obtener muestras del concreto en
+                            estructuras existentes y evaluar su resistencia y condiciones internas.
+                            <br> <br>
+                            <b> Procedimiento:</b><br>
+                            Se perfora un núcleo del concreto utilizando una herramienta especial, y la
+                            muestra resultante se utiliza para realizar pruebas de resistencia a la compresión y
+                            analizar la calidad y condiciones internas del concreto.
+
+
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+
         <!--CONTACTANOS-->
         <div class="container text-center ">
             <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
                 data-value="btn-contactanos">Contáctanos</a>
         </div>
         <!--CONTACTANOS-->
-        </div>
-
-        
     </div>
 
 
