--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios1">Estudios de
+                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                    data-value="servicio1">Estudios de
                                     suelos</a></li>
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios2">Control de
-                                    calidad</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            
+                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                    data-value="servicio3">Perforación</a></li>
                         </ul>
                     </li>
 
@@ -82,7 +87,7 @@
         <div class="img-oscura">
             <img src="./img/banner_inicio.jpg" class="banner">
         </div>
-       
+
         <div class="texto-derecha">
             <p style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">En el año
                 2,004, el ingeniero consultor con estudios de Maestría en Mecánica de Suelos, Oscar Osvaldo Jirón Boza,
@@ -99,7 +104,7 @@
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                 href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
                 target="_blank">+505 8527-49058</a>
-        </address> 
+        </address>
 
 
     </div>
@@ -122,7 +127,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Estudios Geotécnicos</h3>
+                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio1">Estudios
+                                    Geotécnicos</h3>
                             </a>
                         </div>
                     </div>
@@ -138,7 +144,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Control de Calidad de Materiales</h3>
+                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio2">Control de
+                                    Calidad de Materiales</h3>
                             </a>
                         </div>
                     </div>
@@ -154,7 +161,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5">Perforación</h3>
+                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio3">Perforación
+                                </h3>
                             </a>
                         </div>
                     </div>
@@ -208,48 +216,55 @@
         <h2 class="text-center " data-section="proyectos" data-value="titulo">NUESTROS PROYECTOS</h2>
         <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row justify-content-center">
-                    <div class="col-md ">
-                        <div class="card" style="width: 80%;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="carousel-item active">
+                    <div class="row justify-content-evenly">
+                        <div class="col-md ">
+                            <div class="card" style="width: 80%;">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="card" style="width: 80%">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="col-md">
+                            <div class="card" style="width: 80%">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
                             </div>
-                          </div>
-                    </div>
+                        </div>
 
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </div>
 
     <!--CONTACTANOS-->
