AHORA SÍ SE MIRA MEJOR

--- a/contacto.html
+++ b/contacto.html
@@ -84,12 +84,12 @@
         <div class="row container" style="padding-top: 2vh !important; padding-bottom: 10vh !important;">
             <div class="col-md-5 descripcion-servicio">
                 <div>
-                    <h4 data-section="datos-contacto" data-value="tel">Teléfono</h4>
-                    <p>+505 8527-4908</p>
-                    <p data-section="datos-contacto" data-value="tel-desc"> O envíanos un mensaje a nuestro Whatsapp</p>
-                    <a href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
-                        target="_blank">
-                        <img src="https://violet.lv/img/cms/whatsapp%20logo%20violet.png" width="40%">
+                    <h4 data-section="datos-contacto" data-value="tel">Llámanos o escríbenos a nuestro Whatsapp</h4>
+                    <img src="./img/icons/call_us_icon.png" class="d-inline" style="width:2rem !important; height: 2rem !important; "> <p class="d-inline">+505 8527-4908</p>
+                   <br>
+                    <a href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA" class="link-offset-3"
+                        target="_blank" >
+                        <img src="./img/icons/whatsappus_icon.png" class="d-inline" style="width:2rem !important; height: 2rem !important;">+xxxxxxx<p></p>
                     </a>
 
                 </div>
