--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
-                            
+
                             <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
                                     data-value="servicio3">Perforación</a></li>
                         </ul>
@@ -89,12 +89,10 @@
         </div>
 
         <div class="texto-derecha">
-            <p style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">En el año
-                2,004, el ingeniero consultor con estudios de Maestría en Mecánica de Suelos, Oscar Osvaldo Jirón Boza,
-                viendo la necesidad que tenía Nicaragua, en el campo de la ingeniería, de desarrollar técnicamente y
-                cuantitativamente la rama de estudios geotécnicos y de materiales de construcción, fundó la empresa
-                ingeniera Geotecnia de Nicaragua (GEONIC) que es una empresa que a manera general realiza estudios
-                ingenieros y brinda servicios de investigación en el ramo de geología y geotecnia</p>
+            <p class="fs-5" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">Nos
+                especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados
+                por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.
+            </p>
             <a class="btn btn-contacto texto-blanco fs-6" style="margin-left: 0% !important;" href="contacto.html"
                 role="button" data-section="inicio" data-value="btn-contactanos">Contáctanos</a>
         </div>
@@ -154,7 +152,7 @@
                 <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
-                            <a href="#"
+                            <a href="perforacion.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                     viewBox="0 0 16 16" style="width:2rem !important;">
@@ -225,30 +223,66 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="row justify-content-evenly">
+                    <div class="row justify-content-center">
                         <div class="col-md ">
-                            <div class="card" style="width: 80%;">
-                                <img src="..." class="card-img-top" alt="...">
+                            <div class="card" style="width: 100%;">
+                                <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
+                                    class="card-img-top imagen-proyectos" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
+                                    <p class="card-text">Prueba aerodromo los brasiles</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md">
-                            <div class="card" style="width: 80%">
-                                <img src="..." class="card-img-top" alt="...">
+                            <div class="card" style="width: 100%">
+                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                    alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
+                                    <p class="card-text">texto aquí</p>
                                 </div>
                             </div>
                         </div>
-
+                        <div class="col-md">
+                            <div class="card" style="width: 100%">
+                                <img src="./img/proyectos/AEROPUERTO_CORN_ISLAND.jpg"
+                                    class="card-img-top imagen-proyectos" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">AEROPUERTO CORN ISLAND</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="row justify-content-center">
+                        <div class="col-md ">
+                            <div class="card" style="width: 100%;">
+                                <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
+                                    class="card-img-top imagen-proyectos" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Prueba aerodromo los brasiles</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="card" style="width: 100%">
+                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                    alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">texto aquí</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="card" style="width: 100%">
+                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                    alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">texto aquí</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="..." class="d-block w-100" alt="...">
@@ -269,7 +303,7 @@
 
     <!--CONTACTANOS-->
     <div class="container text-center ">
-        <a class="btn btn-contacto texto-blanco fs-5" href="#" role="button" data-section="inicio"
+        <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
             data-value="btn-contactanos">Contáctanos</a>
     </div>
     <!--CONTACTANOS-->
@@ -338,7 +372,6 @@
                                 <p class="d-inline">Facebook</p>
                             </a>
                         </li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Whatsapp</a></li>
 
                     </ul>
                 </div>
