--- a/estudios-geotecnicos.html
+++ b/estudios-geotecnicos.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto " style="font-size: 1.1rem !important;">
+                <ul class="navbar-nav ms-auto nav-ul">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
                             data-value="inicio">Inicio</a>
@@ -38,15 +38,21 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios1">Estudios de
+                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                    data-value="servicio1">Estudios de
                                     suelos</a></li>
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios">Control de
-                                    calidad</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
+                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                    data-value="servicio4">Perforación</a></li>
                         </ul>
                     </li>
 
@@ -76,7 +82,7 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 data-section="estudios-suelos" data-value="titulo">ESTUDIOS GEOTÉCNICOS</h3>
+        <h3 data-section="estudios-geotecnicos" data-value="titulo">ESTUDIOS GEOTÉCNICOS</h3>
     </div>
 
 
