--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto " style="font-size: 1.1rem !important;">
+                <ul class="navbar-nav ms-auto nav-ul">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
                             data-value="inicio">Inicio</a>
@@ -38,15 +38,21 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios1">Estudios de
+                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                    data-value="servicio1">Estudios de
                                     suelos</a></li>
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios">Control de
-                                    calidad</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
+                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                    data-value="servicio4">Perforación</a></li>
                         </ul>
                     </li>
 
@@ -122,22 +128,6 @@
                             </svg>
                             <h3 class="card-title fs-5">Control
                                 de calidad de los suelos</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
-                    <div class="card-body">
-                        <a href="#laboratorio-suelos"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Laboratorio de suelos</h3>
                         </a>
                     </div>
                 </div>
