--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
-
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
                             <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
-                                    data-value="servicio3">Perforación</a></li>
+                                    data-value="servicio4">Perforación</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -89,7 +90,8 @@
         </div>
 
         <div class="texto-derecha">
-            <p class="fs-5" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">Nos
+            <p class="fs-5" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">
+                Nos
                 especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados
                 por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.
             </p>
@@ -152,6 +154,23 @@
                 <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
+                            <a href="laboratorio-de-suelos.html"
+                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
+                                    viewBox="0 0 16 16" style="width:2rem !important;">
+                                    <path
+                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
+                                </svg>
+                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio3">Laboratorio de
+                                    suelos
+                                </h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md col-lg-3 ">
+                    <div class="card" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body">
                             <a href="perforacion.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -159,7 +178,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio3">Perforación
+                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio4">Perforación
                                 </h3>
                             </a>
                         </div>
@@ -368,7 +387,7 @@
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
                                 href="#">
                                 <img class="d-inline" src="./img/icons/facebook_icon.png"
-                                    style="width:2rem !important; height: 2rem !important; ">
+                                    style="width:2rem !important; height: 2rem !important;">
                                 <p class="d-inline">Facebook</p>
                             </a>
                         </li>
