--- a/nuestros-proyectos.html
+++ b/nuestros-proyectos.html
@@ -17,8 +17,8 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-     <!-- AQUÍ COMIENZA EL NAVBAR-->
-     <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <!-- AQUÍ COMIENZA EL NAVBAR-->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
         <div class="container-fluid nav-tuneado">
             <a class="navbar-brand " href="index.html"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -82,48 +82,97 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 data-section="perforacion" data-value="titulo">PERFORACIÓN</h3>
+        <h3 >NUESTROS PROYECTOS</h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row container">
-            <div class="col-md descripcion-servicio">
-                <p>Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios de
-                    suelos, brindando servicios a una variedad de clientes en el sector de la construcción. La empresa
-                    se ha especializado en perforaciones en roca y suelos, disponiendo del equipamiento adecuado para
-                    tales fines. En este aspecto, la firma cuenta con equipos portátiles y máquinas perforadoras
-                    rotativas, complementadas con sus respectivos accesorios.
 
-                </p>
-
-            </div>
-
-
-            <div class="col-md descripcion-servicio" >
-                <h3 class="fs-5">Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
-                <div class="d-flex" style="height: fit-content;">
-                    <div class="vr"></div>
-                    <div>
-                        
-                        
-                        <ul>
-                            <li>
-                                Perforaciones profundas mediante máquina rotativa y con lodos bentoníticos.
-                            </li>
-
-                            <li>
-                                Perforación por roto-percusión.
-
-                            </li>
-                            <li>
-                                Ensayo de penetración estándar (SPT).
-
-                            </li>
-                        </ul>
+        <div class="container">
+            <h2 class="text-center " data-section="proyectos" data-value="titulo">NUESTROS PROYECTOS</h2>
+            <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <!--<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>-->
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row justify-content-center">
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
+                                        class="card-img-top imagen-proyectos" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">Prueba aerodromo los brasiles</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">texto aquí</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/proyectos/AEROPUERTO_CORN_ISLAND.jpg"
+                                        class="card-img-top imagen-proyectos" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">AEROPUERTO CORN ISLAND</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
+                                        class="card-img-top imagen-proyectos" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">Prueba aerodromo los brasiles</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">texto aquí</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">texto aquí</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
 
