--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -27,30 +27,37 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto " style="font-size: 1.1rem !important;">
+                <ul class="navbar-nav ms-auto nav-ul">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
                             data-value="inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sobre-nosotros.html" data-section="nav" data-value="nosotros">Nosotros</a>
+                        <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
+                            data-value="nosotros">Nosotros</a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios1">Estudios de
+                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                    data-value="servicio1">Estudios de
                                     suelos</a></li>
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios">Control de
-                                    calidad</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
+                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                    data-value="servicio4">Perforación</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
