--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="texto-derecha">
-            <p class="fs-5" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">
+            <p class="" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">
                 Nos
                 especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados
                 por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.
